--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,7 +2,16 @@ server {
     listen 80;
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
-    location /hello/ {
-    root /home/box/web/;
-    }
+	location ^~ /uploads/ {
+		root /home/box/web/;
+	}
+	location ^~ /hello/ {
+		proxy_pass http://127.0.0.1:8080/;
+	}
+	location / {
+		proxy_pass http://127.0.0.1:8000/;
+	}
+	location ~* ^.+\..+$ {
+		root /home/box/web/public/;
+	}
 }
