--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,17 +1,14 @@
 server {
     listen 80;
-    error_log /home/box/web/error.log;
-    access_log /home/box/web/access.log;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real_IP $remote_addr;
 	location ^~ /uploads/ {
 		root /home/box/web/;
 	}
 	location ^~ /hello/ {
-		proxy_pass http://127.0.0.1:8080/;
+		proxy_pass http://0.0.0.0:8080/;
 	}
 	location / {
-		proxy_pass http://127.0.0.1:8000/;
-	}
-	location ~* ^.+\..+$ {
-		root /home/box/web/public/;
+		return 404;
 	}
 }
